# docs/swagger.yaml
@@ -1,5 +1,36 @@
 basePath: /api/v1
 definitions:
+  github_com_nikitaaldaev_bani_internal_domain.AnalyticsPeriod:
+    enum:
+    - 1d
+    - 7d
+    - 30d
+    - 90d
+    type: string
+    x-enum-varnames:
+    - PeriodDay
+    - PeriodWeek
+    - PeriodMonth
+    - Period90d
+  github_com_nikitaaldaev_bani_internal_domain.AnalyticsSnapshot:
+    properties:
+      avg_rating:
+        type: number
+      bathhouse_id:
+        type: string
+      bookings:
+        type: integer
+      date:
+        type: string
+      revenue:
+        type: integer
+      review_count:
+        type: integer
+      unique_views:
+        type: integer
+      views:
+        type: integer
+    type: object
   github_com_nikitaaldaev_bani_internal_seo.MetaTags:
     properties:
       canonical:
@@ -13,18 +44,70 @@ definitions:
       title:
         type: string
     type: object
-  github_com_nikitaaldaev_bani_internal_service.MyStatsOutput:
+  github_com_nikitaaldaev_bani_internal_service.AdminDashboard:
     properties:
-      avg_check:
-        type: integer
       avg_rating:
         type: number
-      review_count:
+      dau:
+        description: daily active users (from bookings)
         type: integer
-      total_spent:
+      mau:
+        description: monthly active users
         type: integer
-      total_visits:
+      new_users:
         type: integer
+      period:
+        $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_domain.AnalyticsPeriod'
+      top_bathhouses:
+        items:
+          $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.TopBathhouseInfo'
+        type: array
+      total_bathhouses:
+        type: integer
+      total_bookings:
+        type: integer
+      total_revenue:
+        type: integer
+      total_users:
+        type: integer
+      total_views:
+        type: integer
+      wau:
+        description: weekly active users
+        type: integer
+    type: object
+  github_com_nikitaaldaev_bani_internal_service.OwnerDashboard:
+    properties:
+      avg_check:
+        description: revenue / bookings
+        type: integer
+      bookings:
+        type: integer
+      bookings_change:
+        type: number
+      conversion_rate:
+        description: bookings / views
+        type: number
+      period:
+        $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_domain.AnalyticsPeriod'
+      previous_period:
+        $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.OwnerDashboard'
+      rating:
+        type: number
+      rating_change:
+        description: '% change from previous period'
+        type: number
+      revenue:
+        description: in kopecks
+        type: integer
+      revenue_change:
+        type: number
+      unique_views:
+        type: integer
+      views:
+        type: integer
+      views_change:
+        type: number
     type: object
   github_com_nikitaaldaev_bani_internal_service.TimeSlot:
     properties:
@@ -38,6 +121,21 @@ definitions:
         type: integer
       startTime:
         type: string
+    type: object
+  github_com_nikitaaldaev_bani_internal_service.TopBathhouseInfo:
+    properties:
+      bathhouse_id:
+        type: string
+      bookings:
+        type: integer
+      name:
+        type: string
+      rating:
+        type: number
+      revenue:
+        type: integer
+      views:
+        type: integer
     type: object
   internal_handler.APIError:
     properties:
@@ -641,6 +739,19 @@ definitions:
       text:
         type: string
     type: object
+  internal_handler.myStatsResponse:
+    properties:
+      avg_check:
+        type: integer
+      avg_rating:
+        type: number
+      review_count:
+        type: integer
+      total_spent:
+        type: integer
+      total_visits:
+        type: integer
+    type: object
   internal_handler.notificationResponse:
     properties:
       body:
@@ -663,14 +774,6 @@ definitions:
         type: string
       user_id:
         type: string
-    type: object
-  internal_handler.nullableInt64Field:
-    properties:
-      set:
-        type: boolean
-      value:
-        format: int64
-        type: integer
     type: object
   internal_handler.oauthCallbackResponse:
     properties:
@@ -712,6 +815,11 @@ definitions:
         type: string
       user_id:
         type: string
+    type: object
+  internal_handler.pendingCountResponse:
+    properties:
+      pending_count:
+        type: integer
     type: object
   internal_handler.photoResponse:
     properties:
@@ -1058,6 +1166,11 @@ definitions:
       text:
         type: string
     type: object
+  internal_handler.simpleMessageResponse:
+    properties:
+      message:
+        type: string
+    type: object
   internal_handler.slotBlockResponse:
     properties:
       bathhouse_id:
@@ -1102,6 +1215,11 @@ definitions:
       booking_id:
         type: string
     type: object
+  internal_handler.statusResponse:
+    properties:
+      status:
+        type: string
+    type: object
   internal_handler.subscribeRequest:
     properties:
       plan:
@@ -1131,6 +1249,29 @@ definitions:
         type: string
       updated_at:
         type: string
+    type: object
+  internal_handler.toggleFavoriteResponse:
+    properties:
+      is_favorite:
+        type: boolean
+    type: object
+  internal_handler.topBathhousesResponse:
+    properties:
+      bathhouses:
+        items:
+          $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.TopBathhouseInfo'
+        type: array
+      limit:
+        type: integer
+      metric:
+        type: string
+      total_count:
+        type: integer
+    type: object
+  internal_handler.unreadCountResponse:
+    properties:
+      unread_count:
+        type: integer
     type: object
   internal_handler.updateBathhouseRequest:
     properties:
@@ -1206,7 +1347,7 @@ definitions:
       bio:
         type: string
       city_id:
-        $ref: '#/definitions/internal_handler.nullableInt64Field'
+        type: integer
       name:
         type: string
       phone:
@@ -1444,7 +1585,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.AdminDashboard'
               type: object
         "400":
           description: Bad Request
@@ -1503,7 +1644,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.topBathhousesResponse'
               type: object
         "400":
           description: Bad Request
@@ -2775,7 +2916,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.pendingCountResponse'
               type: object
         "401":
           description: Unauthorized
@@ -3981,7 +4122,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.toggleFavoriteResponse'
               type: object
         "400":
           description: Bad Request
@@ -4740,7 +4881,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "400":
           description: Bad Request
@@ -4866,7 +5007,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "400":
           description: Bad Request
@@ -5045,7 +5186,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "400":
           description: Bad Request
@@ -5438,7 +5579,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "400":
           description: Bad Request
@@ -5530,7 +5671,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.statusResponse'
               type: object
         "400":
           description: Bad Request
@@ -5700,7 +5841,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.OwnerDashboard'
               type: object
         "400":
           description: Bad Request
@@ -5773,7 +5914,9 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  items:
+                    $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_domain.AnalyticsSnapshot'
+                  type: array
               type: object
         "400":
           description: Bad Request
@@ -7463,7 +7606,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "400":
           description: Bad Request
@@ -7501,7 +7644,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.simpleMessageResponse'
               type: object
         "401":
           description: Unauthorized
@@ -7531,7 +7674,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.unreadCountResponse'
               type: object
         "401":
           description: Unauthorized
@@ -7829,7 +7972,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_nikitaaldaev_bani_internal_service.MyStatsOutput'
+                  $ref: '#/definitions/internal_handler.myStatsResponse'
               type: object
         "401":
           description: Unauthorized
@@ -7903,7 +8046,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.unreadCountResponse'
               type: object
         "401":
           description: Unauthorized
@@ -8826,7 +8969,7 @@ paths:
             - $ref: '#/definitions/internal_handler.APIResponse'
             - properties:
                 data:
-                  type: object
+                  $ref: '#/definitions/internal_handler.statusResponse'
               type: object
         "400":
           description: Bad Request
